--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~5.0",
+        "illuminate/support": "~5.x",
         "league/flysystem": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4",
-        "illuminate/console": "~5.0"
+        "illuminate/console": "~5.x"
     },
     "autoload": {
         "psr-4": {
